--- a/Chat/Views/Shared/_Layout.cshtml
+++ b/Chat/Views/Shared/_Layout.cshtml
@@ -15,10 +15,10 @@
     <meta name="revised" content="Sunday, July 18th, 2010, 5:15 pm" />
     <title>Quicky - HTML Chat Template</title>
     <!-- Favicon and Touch Icons-->
-    <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+    @*<link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
-    <link rel="shortcut icon" href="../favicon.ico" />
+    <link rel="shortcut icon" href="../favicon.ico" />*@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
